@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SED "1" "July 2007" "sed version 4.1d" "User Commands"
+.TH SED "1" "September 2007" "sed version 4.1d" "User Commands"
 .SH NAME
 sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
@@ -117,15 +117,15 @@ Insert
 .IR text ,
 which has each embedded newline preceded by a backslash.
 .TP
-q
+q [\fIexit-code\fR]
 Immediately quit the \*(sd script without processing
-any more input,
-except that if auto-print is not disabled
-the current pattern space will be printed.
+any more input, except that if auto-print is not disabled
+the current pattern space will be printed.  The exit code
+argument is a GNU extension.
 .TP
-Q
+Q [\fIexit-code\fR]
 Immediately quit the \*(sd script without processing
-any more input.
+any more input.  This is a GNU extension.
 .TP
 .RI r\  filename
 Append text read from
